k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tobw
  name: db-deploy
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mongo:4.4
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 27017
        readinessProbe:
          exec:
            command: 
            - mongo 
            - --eval
            - "'db.runCommand(\"ping\").ok'"
            - localhost:27017/personnes
            - --quiet
          initialDelaySeconds: 1
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: tobw
  name: db-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: db
