k8s/ged.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tobw
  name: ged-deploy
  labels:
    app: ged
spec:
  selector:
    matchLabels:
      app: ged
  template:
    metadata:
      labels:
        app: ged
    spec:
      containers:
      - name: ged
        image: nuxeo:10.10
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 250m
            memory: 1024Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: tobw
  name: ged-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: ged
